--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,11 +17,16 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </head>
-<body>
+<!-- add images to images folder and then save to db as /images/img_file_name.png -->
+<body style="background: url()">
     <div class="container">
         <h1>Get a fresh Quote Every Day</h1>
         
         <h4 id="today_quote">Today's Quote</h4>
+
+        <div>
+            <h5><%= quote.name %></h5>
+        </div>
     </div>
 </body>
 </html>
