saved image files to db

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </head>
 <!-- add images to images folder and then save to db as /images/img_file_name.png -->
-<body style="background: url()">
+<body style="background: url(<%=background.backdrop%>); background-size: 100%">
     <div class="container">
         <h1>Get a fresh Quote Every Day</h1>
         
